# holographic-memory

./: .gitignore  .gitlab-ci.yml  CNAME  COMMERCIAL-LICENSE.md  LICENSE  README.md  index.html  pyproject.toml  robots.txt  sitemap.xml
docs/: GTM_PLAN.md  MVP_STATUS.md  TECHNICAL_SPEC.md  story-holographic-memory.md
example/: admin.html  index.html  index3d.html
server/: leads_app.py
src/holographic_memory/: __init__.py  encoder.py  license.py  memory.py  sdm.py  server.py
web/: astro.config.mjs  package-lock.json  package.json
web/public/: sitemap.xml
web/src/data/: articles.js
web/src/layouts/: Base.astro
web/src/pages/: index.astro
web/src/pages/articles/: [id].astro  index.astro
web/src/styles/: global.css
